--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,13 +7,17 @@
 
 .top-products {
   display: flex; 
-  justify-content:space-evenly;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .product-container {
   width: 20%;
   margin: 1rem;
+}
+
+.product-container a{
+  text-decoration: none;
 }
 
 .product-img {
