Added a cart icon and fetched all the products in the logged in user cart and added the product to user's cart in database by using post when user clicks add to cart

--- a/src/styles/ProductScreen.css
+++ b/src/styles/ProductScreen.css
@@ -32,3 +32,9 @@
   padding: 0.5rem;
   background-color: #ffd571 ;
 }
+
+.added-message {
+  margin: 1rem;
+  font-size: 0.9em;
+  color: #0f3460;
+}
