Added an admin component which an admin can access and list all products and a AdminAdd component which is a form to add new products

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -58,3 +58,10 @@
   width: 2rem;
   margin: 1rem;
 }
+
+.header-admin {
+  margin: 1rem;
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 10%;
+}
